GNOME Bugzilla – Bug 659029
Clipping problem
Last modified: 2011-09-14 15:44:43 UTC
Created attachment 196477 [details] Clip problem Using test-clip in clutter, draw to rectangles that do not intersect.
Created attachment 196479 [details] [review] cogl-journal: Fix software clipping for non-intersecting rectangles When the clip contains two rectangles which do not intersect it was generating a clip bounds where the bottom-right corner was above or to the left of the top-left corner. This would end up allowing the pixels between the two rectangles instead of clipping everything like it should. To fix this there is now an extra check which detects this situation and just clears the clip bounds to all zeroes in a similar way to what cogl-clip-stack does.
Comment on attachment 196479 [details] [review] cogl-journal: Fix software clipping for non-intersecting rectangles this looks good to land to me
Pushed as e81c1f3e to the Cogl master branch and 52aa386 to the Clutter 1.6 branch.